[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.7.0"
dotenvy = "0.15.7"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "macros", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
